[package]
name = "kspace-mppca"
version = "0.1.0"
edition = "2021"

[dependencies]
cfl = {git = "git+ssh://git@github.com:/wyatt-A/cfl.git", branch = "main" }
cs_table = {path = "../civm_scan/cs_table"}
ndarray-linalg = {version = "0.15.0",features = ["netlib-system"]}
#ndarray-linalg = {version = "0.15.0",features = ["openblas-system"]}
array_utils = {path = "../civm_scan/array_utils"}
rand = "0.8.5"
byte-order = "0.3.0"
indicatif = "0.17.8"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
clap = {version = "4.5.19", features = ["derive"]}
serde_json = "1.0.128"
civm_rust_utils = { git = "git+ssh://git@github.com:/wyatt-A/civm_rust_utils.git", branch = "main" }
fourier = { git = "git+ssh://git@github.com:/wyatt-A/fourier.git", branch = "main", features = ["fftw3"]}
mr_data = {path = "../civm_scan/mr_data"}
walkdir = "2.5.0"
nifti = "0.16.0"
recon2 = {path = "../civm_scan/recon2"}
rand_distr = "0.4.3"
